<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_counters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_load_counters_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/connection_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal_2"
        android:layout_marginTop="@dimen/margin_normal_1"
        android:layout_marginRight="@dimen/margin_normal_2"
        android:text="@string/connection_error_description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_counters" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/orange"
        android:text="@string/retry"
        android:layout_marginTop="@dimen/margin_normal_1"
        app:layout_constraintTop_toBottomOf="@+id/connection_error" />
</androidx.constraintlayout.widget.ConstraintLayout>