<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_counters" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_1"
        android:text="@string/n_items"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/times_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal_1"
        android:layout_marginTop="@dimen/margin_normal_1"
        android:text="@string/n_items"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/item_counter"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/item_counter"
        app:layout_constraintBottom_toTopOf="@+id/add_counters">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/no_counters_container"
        layout="@layout/layout_no_counters"
        android:visibility="gone" />

    <include
        android:id="@+id/could_not_load_counters_container"
        layout="@layout/layout_could_not_load_counters"
        android:visibility="gone" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_counters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal_1"
        android:background="@drawable/shape_button_primary_action"
        android:drawableLeft="@drawable/ic_plus"
        android:drawablePadding="10dp"
        android:padding="@dimen/margin_normal_1"
        android:text="@string/add_counters"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>